--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "next": "14.2.5",
