--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ PG_HOST=localhost
 PG_DATABASE=mydb
 PG_PASSWORD=1234
 PG_PORT=5432
+
+
+MONGODB_URI='mongodb+srv://new:FoLYe9BifxjTEq8J@cluster.tvkjz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster'
