--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.3.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "mongodb": "^6.8.0",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
